--- a/purchase_landed_cost/views/purchase_cost_distribution_line_expense_view.xml
+++ b/purchase_landed_cost/views/purchase_cost_distribution_line_expense_view.xml
@@ -6,6 +6,7 @@
         <field name="res_model">purchase.cost.distribution.line.expense</field>
         <field name="view_type">form</field>
         <field name="view_mode">tree</field>
+        <field name="context">{'create': False}</field>
     </record>
 
     <menuitem id="menu_purchase_cost_distribution_line_expense"
