--- a/purchase_landed_cost/views/purchase_cost_distribution_view.xml
+++ b/purchase_landed_cost/views/purchase_cost_distribution_view.xml
@@ -118,7 +118,7 @@
                 <sheet>
                     <div class="oe_title">
                         <h1>
-                            <label string="Cost distribution "/>
+                            <label for="name" string="Cost distribution "/>
                             <field name="name" class="oe_inline" readonly="1"/>
                         </h1>
                     </div>
