[MIG] purchase_packaging from 10.0 to 13.0

--- a/purchase_packaging/views/purchase_order_view.xml
+++ b/purchase_packaging/views/purchase_order_view.xml
@@ -31,7 +31,7 @@
                     position="before"
                 >
                     <field name="product_purchase_qty" />
-                    <field name="product_purchase_uom_id" groups="product.group_uom" />
+                    <field name="product_purchase_uom_id" groups="uom.group_uom" />
                 </xpath>
                 <xpath
                     expr="//page//field[@name='order_line']/tree/field[@name='product_uom']"
@@ -64,7 +64,7 @@
                     position="before"
                 >
                     <field name="product_purchase_qty" />
-                    <field name="product_purchase_uom_id" groups="product.group_uom" />
+                    <field name="product_purchase_uom_id" groups="uom.group_uom" />
                 </xpath>
                 <xpath
                     expr="//page//field[@name='order_line']/form//field[@name='product_uom']"
