--- a/purchase_packaging/views/product_supplier_info_view.xml
+++ b/purchase_packaging/views/product_supplier_info_view.xml
@@ -11,7 +11,7 @@
         <field name="inherit_id" ref="product.product_supplierinfo_tree_view" />
         <field name="arch" type="xml">
             <field name="min_qty" position="after">
-                <field name="min_qty_uom_id" groups="product.group_uom" />
+                <field name="min_qty_uom_id" groups="uom.group_uom" />
                 <field name="packaging_id" groups="product.group_stock_packaging" />
             </field>
         </field>
@@ -25,10 +25,7 @@
         <field name="inherit_id" ref="product.product_supplierinfo_form_view" />
         <field name="arch" type="xml">
             <field name="min_qty" position="after">
-                <span> x <field
-                        name="min_qty_uom_id"
-                        groups="product.group_uom"
-                    /></span>
+                <span> x <field name="min_qty_uom_id" groups="uom.group_uom" /></span>
             </field>
             <field name="product_uom" position="before">
                 <span> of </span>
