--- a/purchase_packaging/views/purchase_order_line_view.xml
+++ b/purchase_packaging/views/purchase_order_line_view.xml
@@ -16,13 +16,14 @@
                 </field>
                 <label for="product_qty" position="before">
                     <field name="product_tmpl_id" invisible="1" />
+                    <field name="product_uom_category_id" invisible="1" />
                     <field
                         name="packaging_id"
                         domain="[('product_tmpl_id','=',product_tmpl_id)]"
                         groups="product.group_stock_packaging"
                     />
                     <field name="product_purchase_qty" />
-                    <field name="product_purchase_uom_id" groups="product.group_uom" />
+                    <field name="product_purchase_uom_id" groups="uom.group_uom" />
                 </label>
                 <field name="product_uom" position="attributes">
                     <attribute
