--- a/purchase_packaging/views/purchase_order_view.xml
+++ b/purchase_packaging/views/purchase_order_view.xml
@@ -13,10 +13,9 @@
                     expr="//page//field[@name='order_line']/tree/field[@name='product_id']"
                     position="after"
                 >
-                    <field name="product_tmpl_id" invisible="1" />
                     <field
                         name="packaging_id"
-                        domain="[('product_tmpl_id','=',product_tmpl_id)]"
+                        domain="[('product_id','=',product_id)]"
                         groups="product.group_stock_packaging"
                     />
                 </xpath>
@@ -46,10 +45,9 @@
                     expr="//page//field[@name='order_line']/form//field[@name='product_id']"
                     position="after"
                 >
-                    <field name="product_tmpl_id" invisible="1" />
                     <field
                         name="packaging_id"
-                        domain="[('product_tmpl_id','=',product_tmpl_id)]"
+                        domain="[('product_id','=',product_id)]"
                         groups="product.group_stock_packaging"
                     />
                 </xpath>
