--- a/purchase_landed_cost/wizard/picking_import_wizard_view.xml
+++ b/purchase_landed_cost/wizard/picking_import_wizard_view.xml
@@ -1,5 +1,4 @@
 <odoo>
-
     <record model="ir.ui.view" id="picking_import_wizard_view">
         <field name="name">picking.import.wizard.form</field>
         <field name="model">picking.import.wizard</field>
@@ -7,27 +6,29 @@
         <field name="arch" type="xml">
             <form string="Select incoming shipment wizard">
                 <group>
-                    <field name="prev_pickings" invisible="1" widget="many2many_tags"/>
-                    <field name="supplier"/>
-                    <field name="pickings" widget="many2many_tags"
-                           domain="[('partner_id', 'child_of', supplier),
+                    <field name="prev_pickings" invisible="1" widget="many2many_tags" />
+                    <field name="supplier" />
+                    <field
+                        name="pickings"
+                        widget="many2many_tags"
+                        domain="[('partner_id', 'child_of', supplier),
                ('location_id.usage', '=', 'supplier'),
-               ('state', '=', 'done')]"/>
+               ('state', '=', 'done')]"
+                    />
                 </group>
                 <footer>
-                    <button string="Import"
-                            name="action_import_picking"
-                            type="object"
-                            class="oe_highlight"/>
+                    <button
+                        string="Import"
+                        name="action_import_picking"
+                        type="object"
+                        class="oe_highlight"
+                    />
                     or
-                    <button string="Cancel"
-                            class="oe_link"
-                            special="cancel"/>
+                    <button string="Cancel" class="oe_link" special="cancel" />
                 </footer>
             </form>
         </field>
     </record>
-
     <record id="action_picking_import_wizard" model="ir.actions.act_window">
         <field name="name">Import incoming shipment</field>
         <field name="type">ir.actions.act_window</field>
@@ -36,5 +37,4 @@
         <field name="view_mode">form</field>
         <field name="target">new</field>
     </record>
-
 </odoo>
