--- a/purchase_landed_cost/views/purchase_cost_distribution_view.xml
+++ b/purchase_landed_cost/views/purchase_cost_distribution_view.xml
@@ -9,7 +9,6 @@
     <record id="action_purchase_cost_distribution" model="ir.actions.act_window">
         <field name="name">Purchase cost distributions</field>
         <field name="res_model">purchase.cost.distribution</field>
-        <field name="view_type">form</field>
         <field name="view_mode">tree,form,calendar,graph</field>
         <field eval="False" name="view_id" />
         <field name="help" type="html">
@@ -102,23 +101,16 @@
                     />
                     <button
                         name="action_done"
-                        string="Update Cost"
+                        string="Set done"
                         states="calculated"
                         type="object"
-                        confirm="Are you sure that you want to update product prices?"
+                        confirm="Are you sure that you want to set done state?"
                         class="oe_highlight"
                     />
                     <button
                         name="action_draft"
-                        string="Cancel"
-                        states="calculated,error"
-                        type="object"
-                    />
-                    <button
-                        name="action_cancel"
-                        string="Cancel"
-                        states="done"
-                        confirm="This will undo the product price update (only if current value matches with the calculated price in this distribution). Do you want to continue?"
+                        string="Set draft"
+                        states="calculated,done"
                         type="object"
                     />
                     <field
@@ -145,7 +137,6 @@
                         </group>
                         <group>
                             <field name="date" />
-                            <field name="cost_update_type" />
                         </group>
                     </group>
                     <notebook>
