--- a/purchase_update_proposal/views/purchase_order.xml
+++ b/purchase_update_proposal/views/purchase_order.xml
@@ -12,7 +12,10 @@
                 <field name="id" attrs="{'invisible': [('proposal_count', '=', 0)]}"/>
             </xpath>
             <field name="order_line" position="before">
-                <group col="4" attrs="{'invisible': [('proposal_count', '=', 0)]}">
+                <group>
+                    <field name="proposal_display" attrs="{'invisible': ['|', ('proposal_count', '=', 0), ('proposal_state', '!=', 'rejected')]}" groups="purchase.group_purchase_user"/>
+                </group>
+                <group col="4" attrs="{'invisible': ['|', ('proposal_count', '=', 0), ('proposal_display', '=', True)]}">
                     <div colspan="4"
                          style="background-color:AntiqueWhite; text-align:center; font-weight: bold; padding: 8px">
                         Update Proposal
