FIX proposal: prevent to execute self.myfield with multiple records
add cancelled status for lines in supplier view

IMP proposal: ergonomy, add ref field

IMP proposal: add oe_read_only to 'approve' button

FIX purch_upd_proposal: cancelled lines stay cancelled after proposal

IMP purch_upd_approval: allow to update delay without reset order

FIX move hook_pending_proposal_approval position call

UPD purchase_update_proposal: refresh translation and pictures

[UPD] Update purchase_update_proposal.pot

[UPD] README.rst

[ADD] icon.png

purchase_update_proposal 8.0.0.2.0

[IMP] purchase_update_proposal: black, isort, prettier

[MIG] purch_upd_proposal: first step, david

[FIX] fix last missing test

[FIX] better layout for proposal

[IMP] adds purchase update proposal functionalities to group_backend users

[FIX] remove useless init file

[DON'T MERGE] test-requirements.txt

[FIX] apply pre-commit

--- a/purchase_update_proposal/views/purchase_line_proposal.xml
+++ b/purchase_update_proposal/views/purchase_line_proposal.xml
@@ -1,24 +1,33 @@
-<?xml version="1.0" encoding="utf-8"?>
-<openerp>
-<data>
+<?xml version="1.0" encoding="utf-8" ?>
+<odoo>
 
     <record id="purchase_line_proposal_tree" model="ir.ui.view">
         <field name="model">purchase.line.proposal</field>
         <field name="arch" type="xml">
-            <tree editable="bottom" fonts="bold:qty!=product_qty">
-                <field name="line_id_" string="ID"/>
+            <tree editable="bottom" class="col-lg-12">
+            <!-- TODO Define a class instead of fonts-->
+            <!-- <tree editable="bottom" fonts="bold:qty!=product_qty"> -->
+                <field name="line_id_" string="ID" />
+                <field name="supplier_ref" />
                 <field name="product_id" />
-                <field name="qty" />
+                <field
+                    name="qty"
+                    attrs="{'readonly': [('partially_received', '=', True)]}"
+                />
                 <field name="date" />
-                <field name="price_u"/>
+                <field
+                    name="price_u"
+                    attrs="{'readonly': [('check_price', '=', False)]}"
+                />
                 <field name="product_qty" />
                 <field name="date_planned" />
-                <field name="price_unit"/>
-                <field name="line_id" invisible="1"/>
-                <field name="order_id" invisible="1"/>
+                <field name="price_unit" />
+                <field name="line_id" invisible="1" />
+                <field name="order_id" invisible="1" />
+                <field name="partially_received" invisible="1" />
+                <field name="check_price" invisible="1" />
             </tree>
         </field>
     </record>
 
-</data>
-</openerp>
+</odoo>
