--- a/purchase_update_proposal/views/purchase_order.xml
+++ b/purchase_update_proposal/views/purchase_order.xml
@@ -1,66 +1,125 @@
-<?xml version="1.0" encoding="utf-8"?>
-<openerp>
-<data>
+<?xml version="1.0" encoding="utf-8" ?>
+<odoo>
 
     <record id="purchase_order_form" model="ir.ui.view">
         <field name="model">purchase.order</field>
-        <field name="inherit_id" ref="purchase.purchase_order_form"/>
+        <field name="inherit_id" ref="purchase.purchase_order_form" />
         <field name="arch" type="xml">
-            <xpath expr="//field[@name='order_line']/tree/field[@name='product_id']" position="before">
-                <button name="button_update_proposal" help="Suggest Modification" type="object" icon="gtk-leave-fullscreen" groups="purchase_update_proposal.group_purchase_proposal_user"/>
-                <field name="proposal_count" invisible="1"/>
-                <field name="id" attrs="{'invisible': [('proposal_count', '=', 0)]}"/>
+            <xpath
+                expr="//field[@name='order_line']/tree/field[@name='product_id']"
+                position="before"
+            >
+                <field name="proposal_count" invisible="1" />
+                <field name="id" attrs="{'invisible': [('proposal_count', '=', 0)]}" />
             </xpath>
             <field name="order_line" position="before">
                 <group>
-                    <field name="proposal_display" attrs="{'invisible': ['|', ('proposal_count', '=', 0), ('proposal_state', '!=', 'rejected')]}" groups="purchase.group_purchase_user"/>
+                    <button
+                        name="button_switch2other_view"
+                        string="Supplier view"
+                        type="object"
+                        context="{'from_supplier_view': 0}"
+                    />
+                    <field
+                        name="proposal_display"
+                        attrs="{'invisible': ['|', ('proposal_count', '=', 0), ('proposal_state', '!=', 'rejected')]}"
+                    />
+                        <!-- groups="purchase.group_purchase_user" -->
                 </group>
-                <group col="4" attrs="{'invisible': ['|', ('proposal_count', '=', 0), ('proposal_display', '=', True)]}">
-                    <div colspan="4"
-                         style="background-color:AntiqueWhite; text-align:center; font-weight: bold; padding: 8px">
+                <div
+                    attrs="{'invisible': ['|', ('proposal_count', '=', 0), ('proposal_display', '=', True)]}"
+                >
+                    <div
+                        class="col-lg-12"
+                        style="background-color:AntiqueWhite; text-align:center; font-weight: bold; padding: 8px"
+                    >
                         Update Proposal
                     </div>
-                    <group>
-                        <field name="proposal_state" colspan="2"/>
-                        <button name="approve_proposal" help="Approve Proposal" type="object" string="Approve" class="oe_highlight"
-                                attrs="{'invisible': [('proposal_state', 'in', ['approved', 'draft'])]}"
-                                groups="purchase.group_purchase_user"/>
-                        <button name="reject_proposal" help="Reject Proposal" type="object" string="Reject"
-                                attrs="{'invisible': [('proposal_state', 'in', ['draft', 'approved', 'rejected'])]}"
-                                groups="purchase.group_purchase_user"/>
-                        <button name="submit_proposal" help="Submit Proposal" type="object" string="Submit" class="oe_highlight"
-                                attrs="{'invisible': [('proposal_state', 'in', ['approved', 'submitted', 'rejected'])]}"
-                                groups="purchase_update_proposal.group_purchase_proposal_user"/>
-                        <button name="reset_proposal" help="Reset Proposal" type="object" string="Reset"
-                                attrs="{'invisible': [('proposal_state', 'in', ['draft', 'approved'])]}"
-                                groups="purchase_update_proposal.group_purchase_proposal_user"/>
-                        <field name="proposal_count" invisible="1"/>
+                    <group class="col-lg-12">
+                        <field name="proposal_state" />
                     </group>
-                    <group colspan="4" attrs="{'invisible': [('proposal_count', '=', 0)]}">
-                        <field name="proposal_ids" colspan="4" attrs="{'readonly': [('proposal_updatable', '=', 'no')]}" nolabel="1"/>
-                        <div attrs="{'invisible': [('check_price_on_proposal', '=', True)]}" colspan="2" style="text-align:center;">Prices are not updated for this supplier</div>
-                        <field name="check_price_on_proposal" invisible="1"/>
-                        <field name="proposal_updatable" invisible="1"/>
-                        <div attrs="{'invisible': [('proposal_updatable', '!=', 'no')]}" colspan="2"
-                             style="background-color:red; color:white; text-align:center; font-weight: bold;">
-                            We can't complete your request because our incoming workflow is partially finished or cancelled
-                        </div>
+                    <group class="col-lg-12">
+                        <button
+                            name="approve_proposal"
+                            help="Approve Proposal"
+                            type="object"
+                            string="Approve"
+                            class="oe_highlight"
+                            attrs="{'invisible': [('proposal_state', 'in', ['approved', 'draft'])]}"
+                            groups="purchase.group_purchase_user"
+                        />
+                        <button
+                            name="reject_proposal"
+                            help="Reject Proposal"
+                            type="object"
+                            string="Reject"
+                            attrs="{'invisible': [('proposal_state', 'in', ['draft', 'approved', 'rejected'])]}"
+                            groups="purchase.group_purchase_user"
+                        />
+                        <button
+                            name="submit_proposal"
+                            help="Submit Proposal"
+                            type="object"
+                            string="Submit"
+                            class="oe_highlight"
+                            attrs="{'invisible': [('proposal_state', 'in', ['approved', 'submitted', 'rejected'])]}"
+                            groups="purchase_update_proposal.group_purchase_proposal_user"
+                        />
+                        <button
+                            name="reset_proposal"
+                            help="Reset Proposal"
+                            type="object"
+                            string="Reset"
+                            attrs="{'invisible': [('proposal_state', 'in', ['draft', 'approved'])]}"
+                            groups="purchase_update_proposal.group_purchase_proposal_user"
+                        />
+                        <field name="proposal_count" invisible="1" />
                     </group>
-                    <hr style="background: AntiqueWhite; height: 12px" colspan="4"/>
-                </group>
+                    <field
+                        class="col-lg-12"
+                        name="proposal_ids"
+                        mode="tree"
+                        nolabel="1"
+                        attrs="{'readonly': [('proposal_updatable', '=', 'no')]}"
+                    >
+                        <tree>
+                            <field name="line_id_" />
+                            <field name="product_id" />
+                            <field name="qty" />
+                            <field name="product_qty" />
+                        </tree>
+                    </field>
+                    <div
+                        class="col-lg-12"
+                        attrs="{'invisible': [('check_price_on_proposal', '=', True)]}"
+                        style="text-align:center;"
+                    >Prices are not updated for this supplier</div>
+                    <field name="check_price_on_proposal" invisible="1" />
+                    <field name="proposal_updatable" invisible="1" />
+                    <div
+                        attrs="{'invisible': [('proposal_updatable', '!=', 'no')]}"
+                        style="background-color:red; color:white; text-align:center; font-weight: bold;"
+                    >
+                        We can't complete your request because our incoming workflow is partially finished or cancelled
+                    </div>
+                    <hr style="background: AntiqueWhite; height: 12px" colspan="4" />
+                </div>
             </field>
         </field>
     </record>
 
-    <record id="view_purchase_order_filter" model="ir.ui.view">
+    <record id="purchase_order_view_search" model="ir.ui.view">
         <field name="model">purchase.order</field>
-        <field name="inherit_id" ref="purchase.view_purchase_order_filter"/>
+        <field name="inherit_id" ref="purchase.purchase_order_view_search" />
         <field name="arch" type="xml">
-            <filter name="approved" position="after">
-                <filter name="submitted" string="Submitted" domain="[('proposal_state','=', 'submitted')]"/>
+            <filter name="unconfirmed" position="after">
+                <filter
+                    name="submitted"
+                    string="Submitted Proposal"
+                    domain="[('proposal_state','=', 'submitted')]"
+                />
             </filter>
         </field>
     </record>
 
-</data>
-</openerp>
+</odoo>
