add cancelled status for lines in supplier view
IMP proposal: ergonomy, add ref field

IMP proposal: add oe_read_only to 'approve' button

FIX purch_upd_proposal: cancelled lines stay cancelled after proposal

--- a/purchase_update_proposal/views/purchase_line_proposal.xml
+++ b/purchase_update_proposal/views/purchase_line_proposal.xml
@@ -7,6 +7,7 @@
         <field name="arch" type="xml">
             <tree editable="bottom" fonts="bold:qty!=product_qty">
                 <field name="line_id_" string="ID"/>
+                <field name="supplier_ref" />
                 <field name="product_id" />
                 <field name="qty" />
                 <field name="date" />
